# simple-strategy-cpp

simple-strategy/: CMakeLists.txt  gcc.txt  graph_game  run.sh  strategy_nodes
simple-strategy/include/: GlobalState.h  Node.h  Unit.h  VisualObject.h
simple-strategy/src/: GlobalState.cpp  Node.cpp  Unit.cpp  main.cpp
